# rocket_diesel_demo

./: .dockerignore  .env  .gitignore  Cargo.toml  LICENCE  README.md  Rocket.toml  dev.api.Dockerfile  docker-compose.yaml  read_me.md  token
migrations/2022-06-16-115016_counter/: down.sql  up.sql
src/: main.rs  schema.rs
src/database/: mod.rs  models.rs
