[package]
name = "rocket_diesel_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.11"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
diesel_migrations = "1.4.0"

[dependencies.rocket_contrib]
version = "0.4.11"
default-features = false
features = ["json", "diesel_postgres_pool"]