[package]
name = "rocket_diesel_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rocket = "=0.5.0-rc.2"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
diesel_migrations = "1.4.0"

okapi =  { version = "0.4", features = ["derive_json_schema" ] }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "rocket_db_pools"]}
schemars = "0.8.10"
serde = "1.0.136"



[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["diesel_postgres_pool"]

