[package]
name = "rocket_diesel_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rocket = { version = "0.5.0-rc.2", default-features = false, features = ["json"] }
diesel = { version = "1.4.4", features = ["postgres"] }
diesel_migrations = "1.4.0"

okapi =  { version = "0.7.0-rc.1" }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "rapidoc"]}
schemars = "0.8.10"
serde = "1.0.136"
# indexmap = "1.8.2"
postgres = "0.19.3"



[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["diesel_postgres_pool", "postgres_pool"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_postgres"]

[dependencies.sqlx]
version = "0.5"
